--- a/tasks/Exporter/Win32NT.yml
+++ b/tasks/Exporter/Win32NT.yml
@@ -66,38 +66,6 @@
   with_items:
     - '{{ wmi_exporter_collector_scripts }}'
 
-- name: Check register client are accessible from current host
-  win_uri:
-    url: 'http://{{ item }}:{{ consul_public_http_port }}/v1/agent/service/register'
-    method: 'GET'
-    timeout: '5'
-  environment:
-    no_proxy: '{{ item }}'
-  loop: '{{ consul_public_clients }}'
-  changed_when: false
-  failed_when: false
-  register: check_consul_reg
-
-- name: Register exporter service with an http health check
-  win_uri:
-    url: 'http://{{ item.client }}:{{ consul_public_http_port }}/v1/agent/service/register'
-    method: 'PUT'
-    body: '{"tags":["prometheus","exporter"],"ID":"{{ inventory_hostname | upper }}_wmi_exporter","name":"wmi_exporter","address":"{{ ansible_ip_addresses[0] }}","port":9182,"meta":{"instance":"{{ inventory_hostname | upper }}","group":"{{ group_names[0] | upper }}","environment":"{{ environments | upper }}"{% if tags is defined %},{{ tags | to_json | regex_replace("{") | regex_replace("}") }}{% endif %}},"checks":[{"http":"http://{{ ansible_ip_addresses[0] }}:9182/metrics","interval":"60s","tls_skip_verify":true,"method":"HEAD","timeout":"10s"}]}'
-    status_code: '200'
-    headers:
-      X-Consul-Token: '{{ consul_public_exporter_token }}'
-      X-Requested-By: '{{ ansible_ip_addresses[0] }}'
-      cache-control: 'no-cache'
-  environment:
-    no_proxy: '{{ item.client }}'
-  loop: "{{ check_consul_reg.results | json_query('[*].{client:item,status:status_code}') }}"
+- include_tasks: '{{ ansible_system }}/register.yml'
   when:
     - consul_public_register | bool
-    - item.status == 405
-  register: register_status
-  until: register_status.status_code == 200
-  retries: 3
-  delay: 3
-  no_log: true
-  changed_when: false
-  failed_when: false
