modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/Config/Linux/Environment.yml 	modified:   tasks/Exporter/Linux/firewall.yml 	new file:   templates/ntp.conf.j2

--- a/tasks/Exporter/Linux/firewall.yml
+++ b/tasks/Exporter/Linux/firewall.yml
@@ -10,7 +10,7 @@
     - name: Reload the node exporter service firewalld
       service:
         name: 'iptables'
-        state: reloaded
+        state: 'reloaded'
   when: 
     - ansible_distribution_major_version|int == 6
 
@@ -20,11 +20,12 @@
 
 - name: Node exporter firewall operation
   firewalld:
-    port: "{{ node_exporter_port }}/tcp"
+    port: '{{ node_exporter_port }}/tcp'
     zone: 'public'
     permanent: 'true'
     immediate: 'true'
     state: 'enabled'
   when: 
     - ansible_distribution_major_version|int > 6
+    - services_state.ansible_facts.services["firewalld.service"] is defined
     - services_state.ansible_facts.services["firewalld.service"].state == 'running'
