--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,16 +1,21 @@
 ---
 # 主任务参数 #
-os_config: false # 是否执行主机初始配置。
+os_config: false   # 是否执行主机初始配置。
 os_datadisc: false # 是否挂载数据盘。
 os_exporter: false # 是否部署普罗米修斯客户端。
-os_harden: false # 是否执行主机加固配置。
-os_ossec: false # 是否部署入侵检测客户端。
+os_harden: false   # 是否执行主机加固配置。
+os_ossec: false    # 是否部署入侵检测客户端。
 os_software: false # 是否执行主机基本软件安装和更新。
 
 # 主机初始配置参数 #
 # 通用参数 #
 os_disable_ipv6: false # 是否关闭IPv6。
 #os_proxy_server: 'http://1.1.1.1:3142' # 主机代理服务器。
+#os_time_server: # 时间服务器。
+#  - 'ntp1.aliyun.com'
+#  - 'ntp2.aliyun.com'
+#  - 'ntp3.aliyun.com'
+#  - 'ntp4.aliyun.com'
 # 远程日志参数 #
 syslog: false # 是否启用远程日志。
 syslog_port: '12201' # 远程日志服务器端口。
