--- a/tasks/Config/Linux/Environment.yml
+++ b/tasks/Config/Linux/Environment.yml
@@ -43,12 +43,15 @@
     line: 'inet_protocols = ipv4'
   when: os_disable_ipv6 | bool
 
-- name: Ensure NTP system events and so on is suppressed
-  lineinfile:
+- name: NTP system configuration
+  template:
+    src: 'ntp.conf.j2'
     dest: '/etc/ntp.conf'
-    state: 'present'
-    line: 'logconfig=allsync +allclock'
-  register: result
+    owner: 'root'
+    group: 'root'
+    mode: '0644'
+  register: os_ntp_update
+  when: os_time_server is defined
 
 - name: Change HW Clock configuration
   lineinfile:
@@ -65,7 +68,7 @@
   async: 1
   poll: 0
   when:
-    - result is changed
+    - os_ntp_update is changed
     - ansible_distribution_major_version|int > 6
 
 - name: Reload NTP service
@@ -76,7 +79,7 @@
   async: 1
   poll: 0
   when:
-    - result is changed
+    - os_ntp_update is changed
     - ansible_distribution_major_version|int == 6
 
 - name: Configure MTA
