--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -277,6 +277,7 @@ node_exporter_collector: # 普罗米修斯客户端系统收集器。
 #  - zfs
 node_exporter_systemd_collector: # 普罗米修斯客户端服务收集器。
   - 'crond'
+  - 'orchestrator'
   - 'ntpd'
   - 'rsyslog'
   - 'sshd'
