--- a/tasks/Exporter/Linux/firewall.yml
+++ b/tasks/Exporter/Linux/firewall.yml
@@ -1,16 +1,17 @@
 ---
-- name: Node exporter firewall operation
+- name: '{{ item }} firewall operation'
   block:
     - name: Allow node exporter service port
       lineinfile:
         dest: '/etc/sysconfig/iptables'
-        regexp: '^-A INPUT -p tcp -m tcp --dport {{ node_exporter_port }} -j ACCEPT$'
-        line: '-A INPUT -p tcp -m tcp --dport {{ node_exporter_port }} -j ACCEPT'
+        regexp: '^-A INPUT -p tcp -m tcp --dport {{ vars[item + "_port"] }} -j ACCEPT$'
+        line: '-A INPUT -p tcp -m tcp --dport {{ vars[item + "_port"] }} -j ACCEPT'
         insertafter: '^:OUTPUT ACCEPT \[\d*:\d*\]$'
     - name: Reload the node exporter service firewalld
       service:
         name: 'iptables'
         state: 'reloaded'
+  loop: '{{ os_linux_exporter_type | lower }}'
   when: 
     - ansible_distribution_major_version|int == 6
 
@@ -18,13 +19,14 @@
   service_facts:
   register: services_state
 
-- name: Node exporter firewall operation
+- name: '{{ item }} firewall operation'
   firewalld:
-    port: '{{ node_exporter_port }}/tcp'
+    port: '{{ vars[item + "_port"] }}/tcp'
     zone: 'public'
     permanent: 'true'
     immediate: 'true'
     state: 'enabled'
+  loop: '{{ os_linux_exporter_type | lower }}'
   when: 
     - ansible_distribution_major_version|int > 6
     - services_state.ansible_facts.services["firewalld.service"] is defined
