--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -235,10 +235,10 @@ wmi_exporter_collector: # 普罗米修斯客户端收集器。
 wmi_exporter_extra_collector: '--collector.service.services-where="Name=''nxlog''"'
 # Linux 普罗米修斯客户端参数 #
 os_linux_exporter_type: # Linux 普罗米修斯客户端类型
-  - 'node_exporter'
-  - 'netdata'
-node_exporter_port: '9100' # 普罗米修斯客户端端口。
-netdata_port: '19999' # NETDATA 客户端端口。
+  - name: 'node_exporter'
+    port: '9100'
+  - name: 'netdata'
+    port: '19999'
 node_exporter_collector: # 普罗米修斯客户端系统收集器。
   - 'arp'
   - 'bcache'
