--- a/tasks/Exporter/Linux.yml
+++ b/tasks/Exporter/Linux.yml
@@ -9,11 +9,13 @@
   include: '{{ ansible_system }}/firewall.yml'
 
 - name: Include {{ item }} tasks
-  include: '{{ ansible_system }}/{{ item | lower }}/{{ item | lower }}.yml'
+  include: '{{ ansible_system }}/{{ item.name | lower }}.yml'
   loop: '{{ os_linux_exporter_type }}'
 
 - name: Registered with HashiCorp Consul
-  include: '{{ ansible_system }}/{{ item | lower }}/register.yml'
+  include: '{{ ansible_system }}/register.yml'
   loop: '{{ os_linux_exporter_type }}'
+  loop_control:
+    loop_var: os_linux_exporter_type_item
   when:
     - consul_public_register | bool
