modified:   README.md 	modified:   defaults/main.yml 	new file:   files/dellhw_exporter.service 	new file:   files/dellhw_exporter.tar.xz 	modified:   tasks/Exporter/Linux.yml 	modified:   tasks/Exporter/Linux/RedHat.yml 	new file:   tasks/Exporter/Linux/dellhw.yml 	modified:   tasks/Exporter/Linux/firewall.yml 	modified:   tasks/Exporter/Linux/register.yml 	modified:   tasks/Exporter/Linux/selinux.yml 	new file:   templates/dellhw_exporter.default.j2 	modified:   templates/netdata.conf.j2 	modified:   templates/node_exporter.j2 	modified:   vars/RedHat.yml

--- a/tasks/Exporter/Linux.yml
+++ b/tasks/Exporter/Linux.yml
@@ -9,8 +9,10 @@
   include: '{{ ansible_system }}/firewall.yml'
 
 - name: Include {{ item }} tasks
-  include: '{{ ansible_system }}/{{ item.name | lower }}.yml'
+  include: '{{ ansible_system }}/{{ os_linux_exporter_type_item.name | lower }}.yml'
   loop: '{{ os_linux_exporter_type }}'
+  loop_control:
+    loop_var: os_linux_exporter_type_item
 
 - name: Registered with HashiCorp Consul
   include: '{{ ansible_system }}/register.yml'
