--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -6,9 +6,9 @@ rsyslog_repo_name: 'rsyslog'
 rsyslog_repo_url: 'http://rpms.adiscon.com/v8-stable/epel-$releasever/$basearch'
 rsyslog_packages: 'rsyslog'
 
-node_exporter_repo_name: 'prometheus'
-node_exporter_repo_url: 'http://cache.omygods.com/prometheus-rpm/release/el/$releasever/$basearch'
-node_exporter_software: 'node_exporter'
+node_repo_name: 'prometheus'
+node_repo_url: 'http://cache.omygods.com/prometheus-rpm/release/el/$releasever/$basearch'
+node_software: 'node_exporter'
 
 netdata_repo_name: 'netdata'
 #netdata_repo_url: "http://packagecloud.io/netdata/netdata/el/$releasever/$basearch"
