--- a/tasks/Config/Linux.yml
+++ b/tasks/Config/Linux.yml
@@ -10,6 +10,9 @@
 
 - include: '{{ ansible_system }}/Timezone.yml'
 
+- include: '{{ ansible_system }}/{{ ansible_os_family }}/DNS.yml'
+  when: os_dns_server is defined
+
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/{{ ansible_distribution_major_version }}/Grub.yml'
 
 - name: Ensure configuraion status file
