modified:   tasks/Config/Linux/Environment.yml 	modified:   templates/resolv.conf.j2 	modified:   templates/scripts/Win32NT/os_info.j2

--- a/tasks/Config/Linux/Environment.yml
+++ b/tasks/Config/Linux/Environment.yml
@@ -138,7 +138,7 @@
   lineinfile:
     dest: '/etc/sysconfig/network'
     state: 'present'
-    line: 'RES_OPTIONS="single-request single-request-reopen"'
+    line: 'RES_OPTIONS="timeout:2 rotate single-request single-request-reopen"'
   when: 
     - network_file.stat.exists
     - os_linux_resolver_single_request | bool
