--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -16,7 +16,7 @@ netdata_repo_url: 'http://cache.omygods.com/netdata/el/$releasever/$basearch'
 netdata_software: 'netdata'
 
 dellhw_repo_name: 'dell-system'
-dellhw_repo_url: 'http://linux.dell.com/repo/hardware/dsu/os_dependent/RHEL7_64'
+dellhw_repo_url: 'http://linux.dell.com/repo/hardware/dsu/os_dependent/RHEL{{ ansible_distribution_major_version }}_64'
 dellhw_software:
   - 'srvadmin-storageservices'
   - 'srvadmin-omacore'
