modified:   README.md 	modified:   files/dellhw_exporter.tar.xz 	modified:   vars/RedHat.yml

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,6 +1,6 @@
 ---
 epel_repo_name: 'epel'
-epel_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/epel/{{ ansible_distribution_major_version }}/$basearch/'
+epel_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/epel/$releasever/$basearch/'
 
 rsyslog_repo_name: 'rsyslog'
 rsyslog_repo_url: 'http://rpms.adiscon.com/v8-stable/epel-$releasever/$basearch'
@@ -11,12 +11,11 @@ node_repo_url: 'http://cache.omygods.com/prometheus-rpm/release/el/$releasever/$
 node_software: 'node_exporter'
 
 netdata_repo_name: 'netdata'
-#netdata_repo_url: "http://packagecloud.io/netdata/netdata/el/$releasever/$basearch"
-netdata_repo_url: 'http://cache.omygods.com/netdata/el/$releasever/$basearch'
+netdata_repo_url: 'http://mirrors.tuna.tsinghua.edu.cn/epel/$releasever/$basearch/'
 netdata_software: 'netdata'
 
 dellhw_repo_name: 'dell-system'
-dellhw_repo_url: 'http://linux.dell.com/repo/hardware/dsu/os_dependent/RHEL{{ ansible_distribution_major_version }}_64'
+dellhw_repo_url: 'http://linux.dell.com/repo/hardware/dsu/os_dependent/RHEL\$releasever\_64'
 dellhw_software:
   - 'srvadmin-storageservices'
   - 'srvadmin-omacore'
