modified:   defaults/main.yml 	modified:   templates/internal_options.conf.j2 	modified:   templates/local_internal_options.conf.j2 	modified:   templates/netdata.conf.j2 	modified:   templates/node_exporter.j2

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -244,6 +244,8 @@ os_linux_exporter_type: # Linux 普罗米修斯客户端类型
     port: '9100'
 #  - name: 'netdata'
 #    port: '19999'
+#    database: 'ram'
+#    history: '300'
 #  - name: 'dellhw'
 #    port: '9137'
 netdata_collector: # NETDATA客户端系统收集器。
@@ -258,6 +260,7 @@ netdata_collector: # NETDATA客户端系统收集器。
 node_exporter_collector: # 普罗米修斯客户端系统收集器。
   - 'arp'
   - 'bcache'
+  - 'bonding'
   - 'conntrack'
   - 'cpu'
   - 'diskstats'
@@ -269,9 +272,9 @@ node_exporter_collector: # 普罗米修斯客户端系统收集器。
   - 'ipvs'
   - 'loadavg'
   - 'meminfo'
+  - 'netclass'
   - 'netdev'
   - 'netstat'
-  - 'netclass'
   - 'nfs'
   - 'nfsd'
   - 'ntp'
@@ -283,7 +286,6 @@ node_exporter_collector: # 普罗米修斯客户端系统收集器。
   - 'timex'
   - 'uname'
   - 'vmstat'
-#  - 'bonding'
 #  - 'cpufreq'
 #  - 'buddyinfo'
 #  - 'drbd'
