--- a/meta/main.yml
+++ b/meta/main.yml
@@ -60,7 +60,7 @@ dependencies:
       beats_type: 'audit'
       beats_version: '{{ os_auditbeat_version }}'
       beats_port_arg: '{{ os_auditbeat_port_arg }}'
-      beats_output_type: '{{ os_auditbeat_output }}'
+      beats_output_type: '{{ os_auditbeat_output.type }}'
       beats_output_port: '{{ os_auditbeat_output.port }}'
       beats_output_auth: '{{ os_auditbeat_output_arg.beats_output_auth | bool }}'
       beats_output_https: '{{ os_auditbeat_output_arg.beats_output_https | bool }}'
