modified:   defaults/main.yml 	modified:   meta/main.yml

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -61,12 +61,14 @@ dependencies:
       beats_version: '{{ os_auditbeat_version }}'
       beats_port_arg: '{{ os_auditbeat_port_arg }}'
       beats_output_type: '{{ os_auditbeat_output.type }}'
-      beats_output_port: '{{ os_auditbeat_output.port }}'
-      beats_output_auth: '{{ os_auditbeat_output_arg.beats_output_auth | bool }}'
-      beats_output_https: '{{ os_auditbeat_output_arg.beats_output_https | bool }}'
-      beats_output_host: '{{ os_auditbeat_output.host }}'
-      beats_output_user: '{{ os_auditbeat_output_arg.beats_output_user }}'
-      beats_output_pass: '{{ os_auditbeat_output_arg.beats_output_pass }}'
+      beats_output_auth: '{{ os_auditbeat_output.auth | bool }}'
+      beats_output_https: '{{ os_auditbeat_output.https | bool }}'
+      beats_output_host: '{{ os_auditbeat_output.elasti_host }}'
+      beats_output_port: '{{ os_auditbeat_output.elasti_port }}'
+      beats_kibana_host: '{{ os_auditbeat_output.kibana_host }}'
+      beats_kibana_port: '{{ os_auditbeat_output.kibana_port }}'
+      beats_output_user: '{{ os_auditbeat_output.user }}'
+      beats_output_pass: '{{ os_auditbeat_output.pass }}'
       auditbeat_audit_rules: '{{ os_linux_audit_rules }}'
     when:
       - os_harden | bool
