modified:   defaults/main.yml 	modified:   vars/RedHat.yml

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -32,6 +32,7 @@ ossec_agent_dependent_packages:
   - 'openscap-scanner'
   - 'openssl'
   - 'osquery'
+  - 'scap-workbench'
 
 ossec_agent_packages:
   - 'wazuh-agent-{{ ossec_version }}*'
