--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -93,7 +93,7 @@ os_pass_maxAge: '60' # Windows主机账户密码有效期。
 # 审计参数 #
 os_audit: false # 是否启用主机审计。
 os_audit_type: 'auditbeat' # 审计进程服务类型，auditbeat 或 auditd。
-os_auditbeat_version: '7.7.1' # Beats 版本。
+os_auditbeat_version: '7.8.1' # Beats 版本。
 os_auditbeat_output: # Beats 数据收集器参数。
   type: 'elasticsearch'
   elasti_host: '{{ syslog_server }}'
@@ -175,17 +175,17 @@ os_win_gpo_audit_policy: # 组审计策略。
   - 'Privilege use'
 
 # 入侵检测系统参数 #
-ossec_version: '3.10.2-1' # WAZUH代理版本。
+ossec_version: '3.13.1-1' # WAZUH代理版本。
 ossec_managers: # WAZUH管理器参数。
   address:
-    - '1.1.1.1'
+    - 'hids-production-ossec-worker.service.dc01.local'
   port: '1517'
   protocol: 'tcp'
   api_port: '55000'
   api_proto: 'https'
   api_user: null
 ossec_agent_authd: # WAZUH代理注册参数。
-  address: '{{ ossec_managers.address[0] }}'
+  address: 'hids-production-ossec-master.service.dc01.local'
   authd_pass: 'Bf6vJRT4WaEAHq'
   port: '1515'
   ssl_auto_negotiate: 'no'
