modified:   defaults/main.yml 	modified:   tasks/OSSec/Linux/RedHat.yml 	modified:   tasks/OSSec/Linux/configureation.yml 	modified:   tasks/OSSec/Win32NT/configureation.yml 	modified:   templates/ossec.conf.j2

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -183,7 +183,8 @@ ossec_managers: # WAZUH管理器参数。
   protocol: 'tcp'
   api_port: '55000'
   api_proto: 'https'
-  api_user: null
+  api_user: 'admin'
+  api_pass: 'changeme'
 ossec_agent_authd: # WAZUH代理注册参数。
   address: 'hids-production-ossec-master.service.dc01.local'
   authd_pass: 'Bf6vJRT4WaEAHq'
