--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,6 +2,7 @@
 # Linux variables
 os_linux_kernel_parameters: # 内核参数。
   fs.suid_dumpable: '0'
+  kernel.randomize_va_space: '2'
   net.core.somaxconn: '20480'
   net.ipv4.conf.all.accept_redirects: '0'
   net.ipv4.conf.all.accept_source_route: '0'
